--- a/retrieval-models.ipynb
+++ b/retrieval-models.ipynb
@@ -946,10 +946,10 @@
       ],
       "metadata": {
         "id": "aGQK-C935EVA",
-        "outputId": "51f157c4-eb94-461f-e7b2-946cd5586eb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "51f157c4-eb94-461f-e7b2-946cd5586eb3"
       },
       "execution_count": 14,
       "outputs": [
@@ -1187,13 +1187,30 @@
       "cell_type": "code",
       "source": [
         " # TODO [2 points]: Compute the mean document length from collection statistics.\n",
-        " mu = 0"
+        "\n",
+        "total_terms = reader.stats()['total_terms']\n",
+        "total_documents = reader.stats()['documents']\n",
+        "mu = total_terms / total_documents\n",
+        "\n",
+        "print(f\"Mean document length: {mu:.2f}\")"
       ],
       "metadata": {
-        "id": "0Xv7_QT6ZvlO"
+        "id": "0Xv7_QT6ZvlO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cf2fed96-74ff-400f-c056-5936a5d57566"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean document length: 330.55\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
