--- a/retrieval-models.ipynb
+++ b/retrieval-models.ipynb
@@ -1226,13 +1226,84 @@
       "source": [
         "## TODO [50 points]: Implement a query likelihood model with Dirichlet smoothing.\n",
         "## For a given query, index reader, and constant k, return the k documents with the highest query likelihoods.\n",
-        "## Think about what data structure would let you keep the top k."
+        "## Think about what data structure would let you keep the top k.\n",
+        "import heapq\n",
+        "import json\n",
+        "from urllib.request import urlopen\n",
+        "\n",
+        "# Load document length information\n",
+        "docfile = urlopen(\"https://github.com/dasmiq/cs6200-retrieval-models/raw/refs/heads/main/doclen.jsonl\")\n",
+        "docinfo = [json.loads(line) for line in docfile]\n",
+        "\n",
+        "def query_likelihood(query, reader, k, mu):\n",
+        "    \"\"\" Implements query likelihood retrieval with Dirichlet smoothing.\n",
+        "\n",
+        "    Args:\n",
+        "        query (str): The search query.\n",
+        "        reader: The index reader.\n",
+        "        k (int): Number of top documents to return.\n",
+        "        mu (float): Dirichlet smoothing parameter (mean document length).\n",
+        "\n",
+        "    Returns:\n",
+        "        List of top-k documents ranked by query likelihood.\n",
+        "    \"\"\"\n",
+        "    query_terms = reader.analyze(query)\n",
+        "    collection_length = reader.stats()['total_terms']\n",
+        "\n",
+        "    # Collect document lengths\n",
+        "    doc_lengths = {doc['iid']: doc['n'] for doc in docinfo}\n",
+        "\n",
+        "    # Dictionary to store document scores\n",
+        "    doc_scores = {}\n",
+        "\n",
+        "    for term in query_terms:\n",
+        "        df, cf = reader.get_term_counts(term, analyzer=None)\n",
+        "        if df == 0:\n",
+        "            continue  # Skip terms not in the collection\n",
+        "\n",
+        "        postings = reader.get_postings_list(term, analyzer=None)\n",
+        "\n",
+        "        for posting in postings:\n",
+        "            doc_id = posting.docid\n",
+        "            tf = posting.tf\n",
+        "            doc_len = doc_lengths.get(doc_id, 0)\n",
+        "\n",
+        "            # Compute Dirichlet-smoothed probability\n",
+        "            p_ml = cf / collection_length\n",
+        "            score = np.log((tf + mu * p_ml) / (doc_len + mu))\n",
+        "\n",
+        "            if doc_id in doc_scores:\n",
+        "                doc_scores[doc_id] += score\n",
+        "            else:\n",
+        "                doc_scores[doc_id] = score\n",
+        "\n",
+        "    # Get top-k documents using a max heap\n",
+        "    top_k_docs = heapq.nlargest(k, doc_scores.items(), key=lambda x: x[1])\n",
+        "\n",
+        "    # Convert internal doc IDs to external IDs\n",
+        "    return [(searcher.doc(doc_id).docid(), score) for doc_id, score in top_k_docs]\n",
+        "\n",
+        "# Example usage, using computed mean document length\n",
+        "top_docs = query_likelihood(\"black bear attacks\", reader, k=10, mu=mu)\n",
+        "print(top_docs)"
       ],
       "metadata": {
-        "id": "PKAzgxzwNQ8v"
+        "id": "PKAzgxzwNQ8v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8615adcb-2552-45ca-d73e-91897cce82f0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('LA021790-0061', -2.7603719895824335), ('LA063090-0144', -2.832336911820677), ('LA091589-0023', -3.0452352946260075), ('LA102989-0166', -3.045906993635822), ('FR940511-1-00107', -3.209120420925506), ('FT942-14032', -3.232059758965277), ('LA022589-0035', -3.2373623816258683), ('LA021389-0007', -3.283201352812752), ('LA052189-0089', -3.3108192110826247), ('LA100489-0043', -3.3276436919099046)]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
